made opacity darker for readability, fix broken link, fix heights

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -820,10 +820,11 @@ figure.effect-bubba img {
 	opacity: 0.7;
 	-webkit-transition: opacity 0.35s;
 	transition: opacity 0.35s;
+	height: 200px;
 }
 
 figure.effect-bubba:hover img {
-	opacity: 0.85;
+	opacity: 0;
 }
 
 figure.effect-bubba figcaption::before,
